// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button check with render 1`] = `
<button
  class="sc-bdVaJa bpVJuJ"
/>
`;

exports[`button test with create 1`] = `
<button
  className="sc-bdVaJa bpVJuJ"
/>
`;
